Fixed Ham size on mobile

--- a/src/comps/fishtank/index.css
+++ b/src/comps/fishtank/index.css
@@ -138,7 +138,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   aspect-ratio: 1/1;
-  width: 2em !important;
+  width: max(10svh, 40px) !important;
   height: auto !important;
   opacity: 0;
   transition: opacity .2s ease-in-out;
